[gd_scene load_steps=4 format=3 uid="uid://cnto8cdxsxbs0"]

[ext_resource type="Theme" uid="uid://b08cibmbq6mmg" path="res://assets/textures/HUD/UI/UI.tres" id="1_1gn6u"]
[ext_resource type="Script" path="res://scripts/settings/settings_menu.gd" id="2_16htg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ujw0h"]
bg_color = Color(0.458824, 0.458824, 0.458824, 1)

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -599.0
offset_bottom = -335.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1gn6u")
script = ExtResource("2_16htg")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.719
anchor_bottom = 0.698
offset_left = -139.25
offset_top = -76.25
offset_right = 138.393
offset_bottom = 81.526
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1gn6u")

[node name="Graphic" type="TabBar" parent="TabContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="TabContainer/Graphic"]
offset_left = 14.0
offset_top = 19.0
offset_right = 121.0
offset_bottom = 176.0

[node name="HBoxContainer4" type="HBoxContainer" parent="TabContainer/Graphic/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Graphic/VBoxContainer2/HBoxContainer4"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Display Mode:"

[node name="DisplayOptionButton" type="OptionButton" parent="TabContainer/Graphic/VBoxContainer2/HBoxContainer4"]
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Fullscreen"
popup/item_1/id = 3

[node name="HBoxContainer7" type="HBoxContainer" parent="TabContainer/Graphic/VBoxContainer2"]
layout_mode = 2

[node name="VSync_Button" type="CheckButton" parent="TabContainer/Graphic/VBoxContainer2/HBoxContainer7"]
layout_mode = 2
size_flags_horizontal = 3
text = "VSYNC"

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Graphic/VBoxContainer2"]
layout_mode = 2

[node name="sdfgi_button" type="CheckButton" parent="TabContainer/Graphic/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "SDFGI"

[node name="HBoxContainer2" type="HBoxContainer" parent="TabContainer/Graphic/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="ssao_button" type="CheckButton" parent="TabContainer/Graphic/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "SSAO"

[node name="HBoxContainer3" type="HBoxContainer" parent="TabContainer/Graphic/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="glow_button" type="CheckButton" parent="TabContainer/Graphic/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Glow"

[node name="HBoxContainer5" type="HBoxContainer" parent="TabContainer/Graphic/VBoxContainer2"]
layout_mode = 2

[node name="Shadow" type="Label" parent="TabContainer/Graphic/VBoxContainer2/HBoxContainer5"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Shadow Quality"

[node name="HBoxContainer6" type="HBoxContainer" parent="TabContainer/Graphic/VBoxContainer2"]
layout_mode = 2

[node name="ShadowQuality" type="OptionButton" parent="TabContainer/Graphic/VBoxContainer2/HBoxContainer6"]
layout_mode = 2

[node name="Button" type="Button" parent="TabContainer/Graphic"]
offset_left = 445.0
offset_top = 212.0
offset_right = 529.0
offset_bottom = 252.0
theme_override_styles/pressed = SubResource("StyleBoxFlat_ujw0h")
text = "Save"

[node name="Sound" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="TabContainer/Sound"]
offset_left = 14.0
offset_right = 531.0
offset_bottom = 212.0
alignment = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="TabContainer/Sound/VBoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Master" type="Label" parent="TabContainer/Sound/VBoxContainer2/HBoxContainer4"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 31
text = "Master"

[node name="MainSlider" type="HSlider" parent="TabContainer/Sound/VBoxContainer2/HBoxContainer4"]
custom_minimum_size = Vector2(380, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 2.0
step = 0.05
value = 1.0

[node name="Main_percent_Label" type="Label" parent="TabContainer/Sound/VBoxContainer2/HBoxContainer4"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 28
text = "100%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Sound/VBoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Music" type="Label" parent="TabContainer/Sound/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 31
text = "Music: "

[node name="MusicSlider" type="HSlider" parent="TabContainer/Sound/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(380, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 2.0
step = 0.05
value = 1.0

[node name="Music_percent_Label" type="Label" parent="TabContainer/Sound/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 28
text = "100%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="TabContainer/Sound/VBoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="AlarmSounds" type="Label" parent="TabContainer/Sound/VBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 31
text = "Alarm: "

[node name="AlarmSlider" type="HSlider" parent="TabContainer/Sound/VBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(380, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 2.0
step = 0.05
value = 1.0

[node name="Alarm_percent_Label" type="Label" parent="TabContainer/Sound/VBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 28
text = "100%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="TabContainer/Sound/VBoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="AmbientSounds" type="Label" parent="TabContainer/Sound/VBoxContainer2/HBoxContainer3"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 31
text = "Ambient:"

[node name="AmbientSlider" type="HSlider" parent="TabContainer/Sound/VBoxContainer2/HBoxContainer3"]
custom_minimum_size = Vector2(380, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 2.0
step = 0.05
value = 1.0

[node name="Ambient_percent_Label" type="Label" parent="TabContainer/Sound/VBoxContainer2/HBoxContainer3"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 28
text = "100%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="TabContainer/Sound"]
layout_mode = 0
offset_left = 445.0
offset_top = 212.0
offset_right = 529.0
offset_bottom = 252.0
text = "Save"

[connection signal="item_selected" from="TabContainer/Graphic/VBoxContainer2/HBoxContainer4/DisplayOptionButton" to="." method="_on_display_option_button_item_selected"]
[connection signal="toggled" from="TabContainer/Graphic/VBoxContainer2/HBoxContainer7/VSync_Button" to="." method="_on_v_sync_button_toggled"]
[connection signal="toggled" from="TabContainer/Graphic/VBoxContainer2/HBoxContainer/sdfgi_button" to="." method="_on_sdfgi_button_toggled"]
[connection signal="toggled" from="TabContainer/Graphic/VBoxContainer2/HBoxContainer2/ssao_button" to="." method="_on_ssao_button_toggled"]
[connection signal="toggled" from="TabContainer/Graphic/VBoxContainer2/HBoxContainer3/glow_button" to="." method="_on_glow_button_toggled"]
[connection signal="item_selected" from="TabContainer/Graphic/VBoxContainer2/HBoxContainer6/ShadowQuality" to="." method="_on_shadow_quality_item_selected"]
[connection signal="pressed" from="TabContainer/Graphic/Button" to="." method="_on_button_pressed"]
[connection signal="value_changed" from="TabContainer/Sound/VBoxContainer2/HBoxContainer4/MainSlider" to="." method="_on_main_slider_value_changed"]
[connection signal="value_changed" from="TabContainer/Sound/VBoxContainer2/HBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="TabContainer/Sound/VBoxContainer2/HBoxContainer2/AlarmSlider" to="." method="_on_alarm_slider_value_changed"]
[connection signal="value_changed" from="TabContainer/Sound/VBoxContainer2/HBoxContainer3/AmbientSlider" to="." method="_on_ambient_slider_value_changed"]
[connection signal="pressed" from="TabContainer/Sound/Button" to="." method="_on_button_pressed"]
